@@ -1,3 +1,4 @@
+//This class handles camera movement and positioning
 #include "Camera.h"
 
 //Camera constructor
@@ -6,7 +7,7 @@ Camera::Camera(int x, int y, int const* CAMERA_MAX_X, int const* CAMERA_MAX_Y)
 	this->x = x;
 	this->y = y;
 	this->CAMERA_MAX_X = CAMERA_MAX_X;
-	this->CAMERA_MAX_Y = CAMERA_MAX_X;
+	this->CAMERA_MAX_Y = CAMERA_MAX_Y;
 }
 
 
@@ -22,14 +23,15 @@ int Camera::getCameraY()
 {
 	return y;
 }
+
 bool Camera::setCameraPos(int x, int y)
 {
 	//Check for invalid positions
-	if (x<0 || x>(int)CAMERA_MAX_X)
+	if (x<0 || x>*CAMERA_MAX_X)
 	{
 		return false;
 	}
-	else if (y<0 || y>(int)CAMERA_MAX_Y)
+	else if (y<0 || y>*CAMERA_MAX_Y)
 	{
 		return false;
 	}
